--- a/HTML/webpage/index.html
+++ b/HTML/webpage/index.html
@@ -6,38 +6,50 @@
     <title>Document</title>
     <!-- link css to html page -->
     <link rel="stylesheet" href="./assests/styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="navbar">
-      <div class="brand">My Website</div>
-      <div class="langugage">
-        <img
-          src="./assests/images/flag1.avif"
-          alt="country flag"
-          id="lang-img"
-        />
-        <span>English</span>
+    <nav class="navbar">
+      <div class="nav-brand">
+        <div class="brand">My Website</div>
+        <div class="language">
+          <div id="lang-div">
+            <img
+              src="./assests/images/flag1.avif"
+              alt="country flag"
+              id="lang-img"
+            />
+          </div>
+          <div id="lang-text">English</div>
+        </div>
       </div>
-      <div class="nav-links">
-        <select name="" id="">
-          <option value="">Hosting</option>
-          <option value="">Computing</option>
-          <option value="">Calculating</option>
-        </select>
-        <select name="" id="">
-          <option value="">Email</option>
-          <option value="">Printing</option>
-          <option value="">Contacting</option>
-        </select>
-        <select name="" id="">
-          <option value="">VPS</option>
-          <option value="">Computing</option>
-          <option value="">Calculating</option>
-        </select>
+      <div class="nav-items">
+        <div class="nav-links">
+          <select name="" id="">
+            <option value="">Hosting</option>
+            <option value="">Computing</option>
+            <option value="">Calculating</option>
+          </select>
+          <select name="" id="">
+            <option value="">Email</option>
+            <option value="">Printing</option>
+            <option value="">Contacting</option>
+          </select>
+          <select name="" id="">
+            <option value="">VPS</option>
+            <option value="">Computing</option>
+            <option value="">Calculating</option>
+          </select>
+        </div>
+        <div class="btn">
+          <button>Log In</button>
+        </div>
       </div>
-      <div class="btn">
-        <button>Log In</button>
-      </div>
-    </div>
+    </nav>
   </body>
 </html>
