--- a/HTML/webpage/index.html
+++ b/HTML/webpage/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <!-- navbar start -->
     <nav class="navbar">
       <div class="nav-brand">
         <div class="brand">My Website</div>
@@ -51,5 +52,43 @@
         </div>
       </div>
     </nav>
+    <!-- navbar end -->
+    <!-- main section start -->
+    <section class="main-section">
+      <div class="main-text">
+        <h2>Discover Pixel-Perfect Templates</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia placeat
+          exercitationem, nisi facilis deserunt natus odit delectus vel
+          voluptate, maiores officia. Enim voluptatum exercitationem vitae
+          maiores eligendi dolorem quia debitis?
+        </p>
+      </div>
+      <div class="image-sec">
+        <div class="inner-nav"></div>
+        <div class="images">
+          <div class="image-div">
+            <div class="top">
+              <div class="top-1">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+              </div>
+              <div class="top-2">
+                <span>Text 1</span>
+                <span>Text 2</span>
+                <span>Text 3</span>
+                <span>Text 4</span>
+              </div>
+              <div class="top-3"></div>
+            </div>
+            <div class="middle"></div>
+            <div class="bottom-1"></div>
+            <div class="bottom-2"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- main section end -->
   </body>
 </html>
