add main-section images

--- a/HTML/webpage/index.html
+++ b/HTML/webpage/index.html
@@ -80,7 +80,7 @@
                 <span>Text 3</span>
                 <span>Text 4</span>
               </div>
-              <div class="top-3"></div>
+              <div class="top-3">Text here..</div>
             </div>
             <div class="middle"></div>
             <div class="bottom-1"></div>
