add images div comple

--- a/HTML/webpage/index.html
+++ b/HTML/webpage/index.html
@@ -86,9 +86,51 @@
             <div class="bottom-1"></div>
             <div class="bottom-2"></div>
           </div>
+          <div class="image-div">
+            <div class="top">
+              <div class="top-1">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+              </div>
+              <div class="top-2">
+                <span>Text 1</span>
+                <span>Text 2</span>
+                <span>Text 3</span>
+                <span>Text 4</span>
+              </div>
+              <div class="top-3">Text here..</div>
+            </div>
+            <div class="middle"></div>
+            <div class="bottom-1"></div>
+            <div class="bottom-2"></div>
+          </div>
+          <div class="image-div">
+            <div class="top">
+              <div class="top-1">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+              </div>
+              <div class="top-2">
+                <span>Text 1</span>
+                <span>Text 2</span>
+                <span>Text 3</span>
+                <span>Text 4</span>
+              </div>
+              <div class="top-3">Text here..</div>
+            </div>
+            <div class="middle"></div>
+            <div class="bottom-1"></div>
+            <div class="bottom-2"></div>
+          </div>
         </div>
       </div>
+      <!-- create another row of images -->
     </section>
     <!-- main section end -->
+    <!-- footer section -->
+    <!-- create a footer -->
+    <!-- end of footer section -->
   </body>
 </html>
