--- a/JavaScript/10_Asynchronous/FetchAPI/SearchUser.html
+++ b/JavaScript/10_Asynchronous/FetchAPI/SearchUser.html
@@ -8,7 +8,9 @@
   <body>
     <input type="text" id="search" name="search" placeholder="enter user id" />
     <input type="submit" onclick="search()" />
-    <div id="profile"></div>
+    <div id="profile">
+      <!-- display profile details -->
+    </div>
     <script src="./Search.js"></script>
   </body>
 </html>
