make navbar corrections

--- a/TypeScript/variables/demo2.html
+++ b/TypeScript/variables/demo2.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="./demo.html">Open Demo 1 Pge</a>
     <button onclick="count()">increase</button>
     <script>
       let counter = 0;
